--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Platinum Smash</title>
     <base href="/">
+    <style>body{ background-color: #333; color: #CCC; }</style>
     <link rel="stylesheet" href="global.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
