--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,13 @@
     <meta charset="utf-8">
     <title>Platinum Smash</title>
     <base href="/">
-    <style>body{ background-color: #333; color: #CCC; }</style>
+    <style>
+        body{ background-color: #0193FC; color: #333; }
+        #loading{ text-align: center; font-family: sans-serif; }
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<app-root>Loading...</app-root>
+<app-root><h1 id="loading">Loading. . . </h1></app-root>
 </body>
 </html>
