Changed name to Brighton Stock

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Platinum Smash</title>
+    <title>Brighton Stock</title>
     <base href="/">
     <style>
         body{ background-color: #0193FC; color: #333; }
