--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<app-root><h1 id="loading">Loading. . . </h1></app-root>
+<ps-app><h1 id="loading">Loading. . . </h1></ps-app>
 </body>
 </html>
